--- a/geomelody/geomelody/en.lproj/PlayerViewController.xib
+++ b/geomelody/geomelody/en.lproj/PlayerViewController.xib
@@ -41,21 +41,19 @@
 					<object class="IBUIImageView" id="731627572">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{320, 270}</string>
+						<string key="NSFrameSize">{320, 273}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="293288795"/>
+						<reference key="NSNextKeyView" ref="83102700"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIMultipleTouchEnabled">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUILabel" id="293288795">
+					<object class="IBUILabel" id="83102700">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{16, 29}, {298, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="261208954"/>
+						<reference key="NSNextKeyView" ref="1063613071"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -63,7 +61,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Title</string>
-						<object class="NSColor" key="IBUITextColor" id="860939399">
+						<object class="NSColor" key="IBUITextColor" id="295485567">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
@@ -81,13 +79,12 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="261208954">
+					<object class="IBUILabel" id="727923543">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{16, 51}, {151, 21}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="584665343"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -95,7 +92,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Interpreter</string>
-						<reference key="IBUITextColor" ref="860939399"/>
+						<reference key="IBUITextColor" ref="295485567"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">8</float>
@@ -118,8 +115,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{128, 68}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="575022889"/>
+								<reference key="NSNextKeyView" ref="542955711"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<float key="IBUIAlpha">0.89999997615814209</float>
@@ -146,7 +142,7 @@
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="578261555">
+								<object class="NSFont" key="IBUIFont" id="495722117">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
@@ -157,8 +153,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{262, 141}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
+								<reference key="NSNextKeyView" ref="727923543"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<float key="IBUIAlpha">0.89999997615814209</float>
@@ -177,15 +172,14 @@
 									<string key="NSResourceName">arrow-right64.png</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="993603845"/>
-								<reference key="IBUIFont" ref="578261555"/>
+								<reference key="IBUIFont" ref="495722117"/>
 							</object>
 							<object class="IBUIButton" id="542955711">
 								<reference key="NSNextResponder" ref="1063613071"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{-6, 141}, {64, 64}}</string>
 								<reference key="NSSuperview" ref="1063613071"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="784089984"/>
+								<reference key="NSNextKeyView" ref="575022889"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<float key="IBUIAlpha">0.89999997615814209</float>
@@ -204,13 +198,12 @@
 									<string key="NSResourceName">arrow-left64.png</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="993603845"/>
-								<reference key="IBUIFont" ref="578261555"/>
+								<reference key="IBUIFont" ref="495722117"/>
 							</object>
 						</array>
 						<string key="NSFrame">{{0, 70}, {320, 200}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="542955711"/>
+						<reference key="NSNextKeyView" ref="784089984"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -222,10 +215,9 @@
 					<object class="IBUITextView" id="633299990">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{124, 281}, {176, 115}}</string>
+						<string key="NSFrame">{{113, 281}, {201, 115}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSNextKeyView" ref="109698914"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -239,13 +231,16 @@
 							<int key="IBUIAutocapitalizationType">2</int>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
+						<int key="IBUIDataDetectorTypes">2</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">1</int>
-							<double key="pointSize">14</double>
+							<string key="name">Helvetica</string>
+							<string key="family">Helvetica</string>
+							<int key="traits">0</int>
+							<double key="pointSize">11</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica</string>
-							<double key="NSSize">14</double>
+							<double key="NSSize">11</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -254,23 +249,46 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{5, 281}, {100, 100}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="633299990"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
+					<object class="IBUIButton" id="109698914">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{5, 409}, {309, 44}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUINormalTitle">Post</string>
+						<reference key="IBUIHighlightedTitleColor" ref="909708934"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzE0IDAuMzA5ODAzOTIxNiAwLjUyMTU2ODYyNzUAA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="425119661"/>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
+							<int key="size">2</int>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">18</double>
+							<int key="NSfFlags">16</int>
+						</object>
+					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 548}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="731627572"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace">
-						<int key="NSID">2</int>
-					</object>
+					<int key="NSColorSpace">1</int>
+					<bytes key="NSRGB">MC45Njg2Mjc0NTEgMC45Njg2Mjc0NTEgMC45Njg2Mjc0NTEAA</bytes>
+					<string key="IBUIColorCocoaTouchKeyPath">tableCellGroupedBackgroundColor</string>
 				</object>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUIScreenMetrics" key="IBUISimulatedDestinationMetrics">
@@ -339,7 +357,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">songTitle</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="293288795"/>
+						<reference key="destination" ref="83102700"/>
 					</object>
 					<int key="connectionID">48</int>
 				</object>
@@ -347,9 +365,25 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">songInterpreter</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="261208954"/>
+						<reference key="destination" ref="727923543"/>
 					</object>
 					<int key="connectionID">49</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">user_comment</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="633299990"/>
+					</object>
+					<int key="connectionID">52</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">post_button</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="109698914"/>
+					</object>
+					<int key="connectionID">54</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -395,8 +429,9 @@
 							<reference ref="731627572"/>
 							<reference ref="584665343"/>
 							<reference ref="1063613071"/>
-							<reference ref="293288795"/>
-							<reference ref="261208954"/>
+							<reference ref="83102700"/>
+							<reference ref="727923543"/>
+							<reference ref="109698914"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -443,12 +478,12 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">42</int>
-						<reference key="object" ref="293288795"/>
+						<reference key="object" ref="83102700"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">43</int>
-						<reference key="object" ref="261208954"/>
+						<reference key="object" ref="727923543"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -460,6 +495,12 @@
 						<int key="objectID">29</int>
 						<reference key="object" ref="542955711"/>
 						<reference key="parent" ref="1063613071"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">53</int>
+						<reference key="object" ref="109698914"/>
+						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Buton - Post</string>
 					</object>
 				</array>
 			</object>
@@ -479,12 +520,14 @@
 				<string key="35.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="42.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="43.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="53.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<real value="0.0" key="53.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">51</int>
+			<int key="maxID">54</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -529,6 +572,7 @@
 						<string key="nextButton">UIButton</string>
 						<string key="pauseStart">NSDate</string>
 						<string key="playPauseButton">UIButton</string>
+						<string key="post_button">UIButton</string>
 						<string key="previousButton">UIButton</string>
 						<string key="previousFireDate">NSDate</string>
 						<string key="shares">UILabel</string>
@@ -536,6 +580,7 @@
 						<string key="songProgressControl">UICircularSlider</string>
 						<string key="songProgressTimer">NSTimer</string>
 						<string key="songTitle">UILabel</string>
+						<string key="user_comment">UITextView</string>
 						<string key="user_picture">UIImageView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -557,6 +602,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="playPauseButton">
 							<string key="name">playPauseButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="post_button">
+							<string key="name">post_button</string>
 							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="previousButton">
@@ -586,6 +635,10 @@
 						<object class="IBToOneOutletInfo" key="songTitle">
 							<string key="name">songTitle</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="user_comment">
+							<string key="name">user_comment</string>
+							<string key="candidateClassName">UITextView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="user_picture">
 							<string key="name">user_picture</string>
